--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 remote_theme             : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "air" #"aqua," "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 url                      : "https://pamarca.github.io"
-baseurl                  : "/xml-minimal/"
+baseurl                  : "/decameronweb-new/"
 
 # THEME-SETTINGS-RECLAIM
 # theme                    : "minimal-mistakes-jekyll"
