added enDecameron to collections
jekyll won't turn those md files into html without them being grouped into a collection (around lines 288 on)

--- a/_config.yml
+++ b/_config.yml
@@ -287,13 +287,18 @@ tag_archive:
 
 # Collections
 collections:
-  edition:
-    output: true
-    permalink: /:collection/:path/
 
   itDecameron:
     output: true
-    permalink: /:collection/:path
+    permalink: /:collection/:path/
+
+  enDecameron:
+    output: true
+    permalink: /:collection/:path/
+  
+  # edition:
+  #   output: true
+  #   permalink: /:collection/:path/
 
 # HTML Compression
 # - https://jch.penibelst.de/
